kubernetes/apps/ingress-nginx/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    external-dns.alpha.kubernetes.io/hostname: "*.staging.winwithcherwin.com,staging.winwithcherwin.com"
    external-dns.alpha.kubernetes.io/target: 91.99.2.195
    nginx.ingress.kubernetes.io/server-snippet: |
      location = / {
        return 200 "All systems go!";
        add_header Content-Type text/plain;
      }
spec:
  ingressClassName: nginx
